[package]
name = "sokoban-level-generator"
version = "0.0.0-development"
edition = "2021"
authors = ["Christoph Bühler <cbuehler@rootd.ch>"]
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/buehler/rust-sokoban-level-generator"

[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "level_generation"
harness = false
